# GeneTree

./: LICENSE  README.md  setup.cfg  setup.py  usage.txt
GeneTree/: __init__.py  __main__.py  clean_name.py  create_tree.py  matrice.py  newickOk.py  timer.py  vargene.lp
GeneTree/cli/: __init__.py  clean_name_cli.py  create_tree_cli.py  matrice_cli.py
Streptococcus_thermophilus/: CoreAndSpeGenomeBicluster.txt  Maximal_bicluster.txt  strains_suppression.py
Streptococcus_thermophilus/Streptococcus_thermophilus_data/: Streptococcus_thermophilus_05-34.txt  Streptococcus_thermophilus_1F8CT.txt  Streptococcus_thermophilus_ACA-DC_2.txt  Streptococcus_thermophilus_APC151.txt  Streptococcus_thermophilus_ASCC_1275.txt  Streptococcus_thermophilus_ATCC_19258.txt  Streptococcus_thermophilus_B59671.txt  Streptococcus_thermophilus_BIO1488.txt  Streptococcus_thermophilus_C106.txt  Streptococcus_thermophilus_CAG_236.txt  Streptococcus_thermophilus_CIRM1035.txt  Streptococcus_thermophilus_CIRM1046.txt  Streptococcus_thermophilus_CIRM1047.txt  Streptococcus_thermophilus_CIRM1048.txt  Streptococcus_thermophilus_CIRM1049.txt  Streptococcus_thermophilus_CIRM1050.txt  Streptococcus_thermophilus_CIRM1051.txt  Streptococcus_thermophilus_CIRM1116.txt  Streptococcus_thermophilus_CIRM1121.txt  Streptococcus_thermophilus_CIRM1122.txt  Streptococcus_thermophilus_CIRM1125.txt  Streptococcus_thermophilus_CIRM1358.txt  Streptococcus_thermophilus_CIRM16.txt  Streptococcus_thermophilus_CIRM18.txt  Streptococcus_thermophilus_CIRM19.txt  Streptococcus_thermophilus_CIRM2101.txt  (+85 more)
(+125 files in other folders)
