[metadata]
name = GeneTree
version = 0.0.1
description = genes annotated iTOL tree creator for species
long_description = file: README.md
long_description_content_type = text/markdown
author = Grégoire Siekaniec
author_email = gregoire.siekaniec@gmail.com
url = https://github.com/gsiekaniec/GeneTree
licence = MIT

[options]
zip_safe = False
packages = GeneTree, GeneTree.cli
install_requires =
	
	

[zest.releaser]
create-wheel = yes

[options.entry_points]
console_scripts = 
	GeneTree = GeneTree.__main__:run

